# zoresearch

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
.claude/skills/import/: SKILL.md
.claude/skills/notes/: SKILL.md
.claude/skills/parse/: SKILL.md
.claude/skills/related/: SKILL.md
.claude/skills/trends/: SKILL.md
.claude/skills/workspace/: SKILL.md
src/zoresearch/: __init__.py  cli.py  config.py  import_.py  lore.py  notes.py  openalex.py  parse.py  paths.py  related.py  web.py  workspace.py  zot.py
tests/: test_import.py
